--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ img{
 li{
     list-style: none;
 }
-
+li:hover{
+    cursor: pointer;
+    background-color: lightgray;
+}
 .second{
     list-style: disc;
     color: red;
